# BlockChain_in_Rust

./: Cargo.toml  README.md  run_blockchain.sh
blockchain.db/: db  snap.000000000000096A
src/: Interface.rs  UTXOset.rs  bc_iter.rs  block.rs  block_chain.rs  block_header.rs  functions.rs  lib.rs  main.rs  merkle_tree.rs  proof_of_work.rs  transactions.rs  wallet.rs
