[package]
name = "Blockchain_in_Rust"
version = "0.1.0"
edition = "2021"

[dependencies]
sha3 = "0.10"
num-bigint = "0.4"  
num-traits = "0.2"  
hex = "0.4"
sled = "0.34"    
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"  
clap = { version = "4.0", features = ["derive"] } 
rand = "0.8"
ring = "0.16"  
ripemd = "0.1.3"
bs58 = "0.5.1"
rust-base58 = "0.0.4"
